# octopus

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: aliyun_rds_test.yml  global_scrape.yml  verify.yml
configs/: scrapers.example.json
docs/: raw-items-output-schema.html
infra/: __init__.py  models.py  scraper_runner.py
infra/dao/: __init__.py  base.py  manager.py  models.py  raw_items.py
scripts/: __init__.py  aliyun_rds_test_insert.py  global_scrape.py  octp_supabase.py  sync_raw_items_snapshot.py
sql/: 001_create_raw_items.sql  002_create_octp_scraper_admin_tables.sql  003_normalize_octp_item_types.sql  004_migrate_legacy_scraper_configs_to_octp.sql  005_create_octp_snapshot_raw_items.sql
tests/: test_dao.py  test_models.py  test_octp_supabase.py  test_raw_items_snapshot.py  test_scripts.py
web/: .env.example  README.md  index.html  package-lock.json  package.json
web/docs/: supabase-scraper-configs-rls.sql
web/src/: App.tsx  main.tsx  types.ts
web/src/components/: ConfigModal.tsx  LoginScreen.tsx  RawItemsSnapshotPanel.tsx  ScraperDashboard.tsx  ScraperLogsPanel.tsx  ToggleSwitch.tsx
web/src/lib/: auth.ts  channels.ts  env.ts  rawItemsSnapshot.ts  scraperConfigs.ts  scraperLogs.ts  supabase.ts
web/src/styles/: app.css
