[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octopus-crawler"
version = "0.1.0"
description = "A general-purpose crawler foundation with a stable raw_items output contract."
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "feedparser>=6.0.0",
  "httpx>=0.27",
  "lxml>=5.0.0",
  "oss2>=2.18.0",
  "PyMySQL>=1.1.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "tenacity>=8.0",
  "trafilatura>=1.6.0",
]

[project.scripts]
octopus-aliyun-rds-test = "scripts.aliyun_rds_test_insert:main"
octopus-global-scrape = "scripts.global_scrape:main"

[tool.setuptools.packages.find]
include = ["infra*", "scrapers*", "scripts*"]
